--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -28,21 +28,26 @@
                         android:id="@+id/imageView3"
                         android:layout_width="150dp"
                         android:layout_height="150dp"
+                        android:layout_marginTop="51dp"
+                        android:layout_marginBottom="20dp"
+                        app:layout_constraintBottom_toTopOf="@+id/tv_nameUser"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.498"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:srcCompat="@drawable/account"
-                        tools:layout_editor_absoluteY="51dp" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/account" />
 
                     <TextView
-                        android:id="@+id/textView5"
+                        android:id="@+id/tv_nameUser"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="20dp"
+                        android:layout_marginBottom="149dp"
                         android:text="Name"
                         android:textColor="@color/black"
                         android:textSize="22sp"
                         android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.504"
                         app:layout_constraintStart_toStartOf="parent"
