--- a/app/src/main/res/layout/item_list_tour.xml
+++ b/app/src/main/res/layout/item_list_tour.xml
@@ -33,12 +33,12 @@
             android:layout_height="wrap_content"
             android:text="Tour Name"
             android:textColor="@color/blue"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <!-- Mô tả tour -->
         <TextView
-            android:id="@+id/tv_descriptionTour"
+            android:id="@+id/tv_day"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Description"
