--- a/app/src/main/res/drawable/grey_corner_bg.xml
+++ b/app/src/main/res/drawable/grey_corner_bg.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="50dp"/>
-            <solid android:color="@color/light_grey"/>
+            <solid android:color="@color/orange"/>
         </shape>
     </item>
 </selector>
