--- a/app/src/main/res/layout/activity_tour_detail.xml
+++ b/app/src/main/res/layout/activity_tour_detail.xml
@@ -250,7 +250,7 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
                     android:backgroundTint="@color/orange"
-                    android:text="MUA TOUR" />
+                    android:text="ĐẶT TOUR" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
