--- a/app/src/main/res/layout/dialog_update_info.xml
+++ b/app/src/main/res/layout/dialog_update_info.xml
@@ -95,6 +95,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="5dp"
+                    android:focusable="false"
+                    android:clickable="false"
                     android:textColor="@color/black"
                     android:inputType="number" />
             </com.google.android.material.textfield.TextInputLayout>
