--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -36,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="24dp"
                 android:background="@android:color/transparent"
-                android:hint="Tìm tour, ví dụ: Nha Trang, ..."
+                android:hint="Tìm tour, ví dụ: Hòn nưa, ..."
                 android:inputType="text"
                 android:paddingStart="6dp"
                 android:singleLine="true"
