--- a/app/src/main/res/layout/item_list_booked_tour.xml
+++ b/app/src/main/res/layout/item_list_booked_tour.xml
@@ -1,77 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp"
+    android:layout_margin="10dp"
     android:layout_marginTop="10dp"
-    >
+    android:layout_marginBottom="10dp"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="6dp"
+    app:cardBackgroundColor="@android:color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:padding="10dp">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/tv_nameBookedTour"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="8dp"
-            >
+            android:padding="6dp"
+            android:text="@string/app_name"
+            android:textAlignment="viewStart"
+            android:textColor="#3987D6"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/img_tour"
-                android:layout_width="143dp"
-                android:layout_height="143dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/nghinhphong" />
-        </androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/tv_status"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="6dp"
+            android:text="Đang xử lý"
+            android:textAlignment="viewStart"
+            android:textColor="#354C6D"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_totalPrice"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="6dp"
+            android:text="@string/tour_price"
+            android:textAlignment="viewStart"
+            android:textColor="@color/orange"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:orientation="vertical"
-            android:paddingStart="10dp">
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tv_nameBookedTour"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="6dp"
-                android:text="@string/app_name"
+                android:text="Ngày đặt: "
                 android:textAlignment="viewStart"
-                android:textColor="#3987D6"
-                android:textSize="20sp"
-                android:textStyle="bold"
-
-                />
-
-            <TextView
-                android:id="@+id/tv_status"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="6dp"
-                android:text="Status"
-                android:textAlignment="viewStart"
-                android:textColor="#354C6D"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tv_totalPrice"
+                android:id="@+id/tv_bookingTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="6dp"
-                android:text="@string/tour_price"
+                android:text="ngày"
                 android:textAlignment="viewStart"
-                android:textColor="@color/orange"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
+
     </LinearLayout>
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
