--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>.
     <color name="yellow">#FFC107</color>
-    <color name="orange">#FE6900</color>
+    <color name="orange">#FF8C00</color>
     <color name="red">#FF010B</color>
     <color name="green">#31FF68</color>
     <color name="red_orange">#FF2531</color>
